--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.4",
     "@tailwindcss/forms": "^0.5.10",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "next": "15.1.7",
